tests/test_input_files/good/test_good_float_5.punkt
main {
  const A = [3.1415, 2.7183].
  println A.
}
