tests/test_input_files/bad/test_bad_array_20.punkt
main {
	const A = [[1, 2, 3], [true, false]].
}
